// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeaderComponent shallow renders with breadcrumbs and the date picker: page_header_with_date_picker 1`] = `
<ContextProvider
  value={
    Object {
      "history": Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "TestKeyForTesting",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "TestKeyForTesting",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      },
      "location": Object {
        "hash": "",
        "key": "TestKeyForTesting",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "match": Object {
        "isExact": true,
        "params": Object {},
        "path": "/",
        "url": "/",
      },
      "staticContext": undefined,
    }
  }
>
  <PageHeaderComponent
    breadcrumbs={
      Array [
        Object {
          "href": "#testHref1",
          "text": "TestCrumb1",
        },
        Object {
          "href": "#testHref2",
          "text": "TestCrumb2",
        },
      ]
    }
    datePicker={true}
    headingText="TestingHeading"
  />
</ContextProvider>
`;

exports[`PageHeaderComponent shallow renders with breadcrumbs without the date picker: page_header_no_date_picker 1`] = `
<ContextProvider
  value={
    Object {
      "history": Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "TestKeyForTesting",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "TestKeyForTesting",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      },
      "location": Object {
        "hash": "",
        "key": "TestKeyForTesting",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "match": Object {
        "isExact": true,
        "params": Object {},
        "path": "/",
        "url": "/",
      },
      "staticContext": undefined,
    }
  }
>
  <PageHeaderComponent
    breadcrumbs={
      Array [
        Object {
          "href": "#testHref1",
          "text": "TestCrumb1",
        },
        Object {
          "href": "#testHref2",
          "text": "TestCrumb2",
        },
      ]
    }
    datePicker={false}
    headingText="TestingHeading"
  />
</ContextProvider>
`;
